# zk-vault

./: .gitignore  Cargo.toml  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_FIXES.md
docs/: PRIVACY_POLICY.md  SECURITY_AUDIT.md
extension/: .gitignore  README.md  manifest.json  package.json  reload.sh  tailwind.config.js  test-card.html
extension/background/: service-worker.js
extension/content/: content-bridge.js  inject-api.js  page-api.js
extension/lib/: email-parser.js  encryption.js  mnemonic.js
extension/popup/: input.css  popup.html  popup.js  styles.css
extension/wasm/: zk_chat.js  zk_chat_bg.wasm
src/: lib.rs  prover.rs  verifier.rs  wasm.rs
src/circuit/: country_proof.rs  email_proof.rs  merkle_proof.rs  mod.rs
src/merkle/: hash.rs  mod.rs  tree.rs
src/proofs/: email.rs  location.rs  mod.rs
