[package]
name = "zk-vault"
version = "0.1.0"
edition = "2021"
description = "ZK Vault - Zero-knowledge proof browser extension"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "getrandom/js", "js-sys", "web-sys"]

[dependencies]
# arkworks core
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"

# arkworks proving system
ark-groth16 = "0.4"
ark-snark = "0.4"

# arkworks curve (BN254 - Ethereum compatible)
ark-bn254 = "0.4"

# arkworks constraint system
ark-r1cs-std = "0.4"
ark-relations = "0.4"

# arkworks crypto primitives (Poseidon hash)
ark-crypto-primitives = { version = "0.4", features = ["r1cs", "sponge"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random number generation
rand = "0.8"

# Base64 encoding (for email parsing)
base64 = "0.21"

# Email parsing
mailparse = "0.14"

# RSA for DKIM verification
rsa = "0.9"

# Regex for parsing
regex = "1.10"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[profile.release]
opt-level = 3
lto = true
